# sim7600-tutorial

./: .env.example  .gitattributes  .gitignore  ADDING_PACKAGES.md  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  GITHUB_RENAME_INSTRUCTIONS.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  PROJECT_STATUS.md  PUBLISH.md  README.md  pyproject.toml  requirements.txt
docs/: ADDING_PACKAGES.md  DEVELOPMENT.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  PROJECT_OVERVIEW.md  PUBLISH.md  QUICK_REFERENCE.md  SMS_CHARACTER_LIMITS.md  SMS_ENCODING_NOTE.md  SMS_SEND_FEATURE_COMPLETE.md  SMS_SEND_IMPLEMENTATION.md  SMS_SEND_QUICK_REFERENCE.md  USAGE_EXAMPLES.md  WEB_DASHBOARD_COMPLETE.md
src/sim7600/: __init__.py  __main__.py  cli.py  logger_config.py  modem.py  parser.py
src/sim7600_dashboard/: README.md  __init__.py  __main__.py  app.py
src/sim7600_dashboard/static/: script.js  style.css
src/sim7600_dashboard/templates/: dashboard.html
src/sms_logger/: __init__.py  logger_config.py  modem.py
