[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sms-logger"
version = "0.1.0"
description = "Receive and log SMS via SIM7600 on Windows"
authors = [{name = "You"}]
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
    "python-dotenv>=1.0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]